feat: convert application from CLI to GUI using JavaFX