@@ -1,19 +1,37 @@
 #!/bin/bash
 
-if [ ! -d bin ]; then
-    mkdir bin
-
-    echo "compiling .java files..."
-    javac -d bin src/*.java
-
-    if [ $? -ne 0 ]; then
-        echo "compilation failed"
-        exit 1
+for folder in javafx-sdk*; do
+    if [ -d "$folder" ]; then
+        JAVA_FX_FOLDER="$folder"
+        break
     fi
+done
 
-    echo "compilation successful"
+if [ -z "$JAVA_FX_FOLDER" ]; then
+    echo "You need the JavaFX SDK to compile this project"
+    exit 1
 fi
 
-cd bin
-clear
-bash
+if [ ! -d bin ]; then
+    mkdir bin
+    echo "Compiling .java files..."
+    javac --module-path "$JAVA_FX_FOLDER/lib" --add-modules javafx.controls -d bin src/*.java
+    if [ $? -ne 0 ]; then
+        echo "Compilation failed"
+        exit 1
+    fi
+    echo "Compilation successful"
+fi
+
+if [ ! -f bin/TaskApp.class ]; then
+    echo "Compiling .java files..."
+    javac --module-path "$JAVA_FX_FOLDER/lib" --add-modules javafx.controls -d bin src/*.java
+    if [ $? -ne 0 ]; then
+        echo "Compilation failed"
+        exit 1
+    fi
+    echo "Compilation successful"
+if
+
+cd bin || exit
+java --module-path "../$JAVA_FX_FOLDER/lib" --add-modules javafx.controls TaskApp &
